# Strategy-Surface-Stability-Analysis

./: README.md  pyproject.toml  run_all.py
.github/workflows/: ci.yaml
data/: BTC_daily_2017_2024_clean.csv  QQQ_daily_10yr_clean.csv  SPY_daily_adj_2015-08-31_to_2025-08-29_clean.csv
docs/: BTC_results.md  QQQ_results.md  RSI.md  entropy.md  eurusd_5_min_strategy.md  jaccard.md  methodology.md  strategy.md  strategy_surface_analysis.md
experiments/: make_figures.py  run_experiments.py
sambo_stability/: Strat_SMA200.py  centroid_drift.py  combine_pdfs.py  entropy_functions.py  jaccard.py  plot_heatmap.py  plot_utils.py  sambo_utils.py  strategy_loader.py
sambo_stability/config/: config_SMA200_BTC.yaml  config_SMA200_QQQ.yaml  config_SMA200_SPY.yaml
